## ======================================================================== ##
## Copyright 2009-2018 Intel Corporation                                    ##
##                                                                          ##
## Licensed under the Apache License, Version 2.0 (the "License");          ##
## you may not use this file except in compliance with the License.         ##
## You may obtain a copy of the License at                                  ##
##                                                                          ##
##     http://www.apache.org/licenses/LICENSE-2.0                           ##
##                                                                          ##
## Unless required by applicable law or agreed to in writing, software      ##
## distributed under the License is distributed on an "AS IS" BASIS,        ##
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. ##
## See the License for the specific language governing permissions and      ##
## limitations under the License.                                           ##
## ======================================================================== ##

# Define an option to enable/disable this module.
#
# Though not actually required we guard each module 'moduleName' with
# a OSPRAY_MODULE_MODULENAME flag that enables/disables its building.
#
OPTION(OSPRAY_MODULE_RENDERER_VI2 "Build Visualization and Illumination II renderer  (for use on the classroom)" OFF)
IF (OSPRAY_MODULE_RENDERER_VI2)

  # build the actual new ospray renderer.  
  # we'll put it into a
  # '<module>/render' subdirectory.
  #
  # This subdirectory will eventually build the
  # libospray_module_<moduleName>.so library that defiens the actual
  # renderer.
  #
  ADD_SUBDIRECTORY(render)

ENDIF (OSPRAY_MODULE_RENDERER_VI2)
